Minor Bugs fixes on Posts
